--- a/src/netbiodyn/ihm/WndAbout.form
+++ b/src/netbiodyn/ihm/WndAbout.form
@@ -54,7 +54,7 @@
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="2"/>
-        <Property name="text" type="java.lang.String" value="Lab-STICC"/>
+        <Property name="text" type="java.lang.String" value="LaTIM &amp; Lab-STICC"/>
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel4MouseClicked"/>
