--- a/src/netbiodyn/ihm/WndEditNoeud.form
+++ b/src/netbiodyn/ihm/WndEditNoeud.form
@@ -56,7 +56,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="200" y="100" width="80" height="-1"/>
+          <AbsoluteConstraints x="210" y="100" width="70" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -98,7 +98,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="140" y="100" width="50" height="20"/>
+          <AbsoluteConstraints x="150" y="100" width="60" height="20"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -341,7 +341,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JTextField" name="textBox_demie_vie1">
+    <Component class="javax.swing.JTextField" name="textBox_demie_vie">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="11" style="0"/>
